syntax = "proto3";

package brand;

// gRPC Brand Service
service BrandService {
  rpc Create (CreateBrandRequest) returns (BrandResponse);
  rpc Update (UpdateBrandRequest) returns (BrandResponse);
  rpc GetBrandById (BrandByIdRequest) returns (BrandResponse);
  rpc SearchBrands (SearchBrandsRequest) returns (SearchBrandsResponse);
}
message BrandByIdRequest {
  string brandId = 1;
  string userId = 2; // ID of the user making the request (for auth, if needed)
}

// Response shape (same for both create and update)
message BrandResponse {
  string id = 1;
  string userId = 2;
  string name = 3;
  string description = 4;
  string logoUrl = 5;
  string websiteUrl = 6;
  string createdAt = 7;
  string updatedAt = 8;
  optional string jwtToken=9;
  optional string refreshToken=10;
  string followersCount = 11;
  string followingCount = 12;
  repeated string tags = 13;
  string campaignCount = 14;
  string tokenName = 15;
  string discord = 16;
  string twitter = 17;
  string telegram = 18;
  optional bool isFollowing = 19;
  string username = 20;

}

// Request for creating a brand (userId comes from JWT in server)
message CreateBrandRequest {
  string userId = 1;
  optional string description = 2;
  optional string logoUrl = 3;
  optional string websiteUrl = 4;
  repeated string tags = 5;
  optional string discord = 6;
  optional string twitter = 7;
  optional string telegram = 8;
  optional string tokenName = 9;
}

// Request for updating a brand
message UpdateBrandRequest {
  string userId = 1;
  optional string name = 2;
  optional string description = 3;
  optional string logoUrl = 4;
  optional string websiteUrl = 5;
  repeated string tags = 6;
  optional string discord = 7;
  optional string twitter = 8;
  optional string telegram = 9;
  optional string tokenName = 10;
  optional string username = 11;
}

message SearchBrandsRequest {
  string q    = 1;  
  int32  page = 2;  
  int32  limit = 3;
}

message BrandSearchItem {
  string id        = 1;
  string username  = 2;
  string name      = 3;
  string logoUrl   = 4;
  string createdAt = 5;
  double score     = 6;
}

message SearchBrandsResponse {
  repeated BrandSearchItem results = 1;
  int32 total = 2;
}
