syntax = "proto3";

package profile;

service ProfileService {
  rpc Create (CreateProfileRequest) returns (ProfileResponse);
  rpc Update (UpdateProfileRequest) returns (ProfileResponse);
  rpc GetByUserId (GetProfileByUserIdRequest) returns (ProfileResponse);
}

message ProfileResponse {
  string id = 1;
  string userId = 2;
  string username = 3;
  string name = 4;
  string avatarUrl = 5;
  string bio = 6;
  string websiteUrl = 7;
  string twitter = 8;
  string facebook = 9;
  string youtube = 10;
  string tiktok = 11;
  string instagram = 15;
  bool isVerified = 12;
  string createdAt = 13;
  string updatedAt = 14;
}

message CreateProfileRequest {
  string userId = 1;
  string username = 2;
  optional string name = 3;
  optional string avatarUrl = 4;
  optional string bio = 5;
  optional string websiteUrl = 6;
  optional string twitter = 7;
  optional string facebook = 8;
  optional string youtube = 9;
  optional string tiktok = 10;
  optional string instagram=11;
}

message UpdateProfileRequest {
  string userId = 1;
  optional string username = 2;
  optional string name = 3;
  optional string avatarUrl = 4;
  optional string bio = 5;
  optional string websiteUrl = 6;
  optional string twitter = 7;
  optional string facebook = 8;
  optional string youtube = 9;
  optional string tiktok = 10;
  optional string instagram=11;
}

message GetProfileByUserIdRequest {
  string userId = 1;
}
